--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt": "~0.4.2",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "load-grunt-tasks": "~0.3.0",
+    "grunt-bump": "0.0.13"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
